# vlm-peft-smiles

./: .gitignore  README.md  main.py  pyproject.toml
prompts/: default_system_prompt.txt
src/: __init__.py  dataset.py  predict.py  vlm_inference.py
